# DS

dscopy/darksusy-6.2.2/: README  README.DOCUMENTATION  README.INSTALL  README.PRINTLEVEL  conf.gcc-5.3.0  conf.gfortran  conf.gfortran_shared_macosx  configure  configure.ac  makefile.in
dscopy/darksusy-6.2.2/contrib/: README_contrib.txt
dscopy/darksusy-6.2.2/contrib/Healpix_3.40/: configure_darksusy.in
dscopy/darksusy-6.2.2/contrib/HiggsBounds-4.3.1/: README_DSpatch.txt  makefile_darksusy.in  string_manip.f90
dscopy/darksusy-6.2.2/contrib/HiggsSignals-1.4.0/: configure_darksusy  datatables.f90  io.f90  makefile_darksusy.in  mc_chisq.f90
dscopy/darksusy-6.2.2/contrib/TSPACK/: makefile.in
dscopy/darksusy-6.2.2/contrib/isajet785-for-darksusy/: README  aldata.f  ctxin.f  ctxout.f  domssm.f  eeerer.f  een1n1.f  ees1s2.f  eesfsf.f  eewiwi.f  eewiwj.f  eezh.f  eezizj.f  gettot.f  higgs.f  isahep.f  isalhd.f  isasee.f  isawig.f  istran.f  makefile.in  pdgid.f  prtlim.f  qcdt.f  readin.f  siggam.f  sigh2.f  sigh3.f  sigkkg.f  sigqcd.f  sigssz.f  sigwh.f  sigwhs.f  sigww.f  sigww2.f  sshff.f  sshgl.f  sshgm.f  sshww.f  ssmass.f  (+12 more)
dscopy/darksusy-6.2.2/contrib/isajet787-for-darksusy/: makefile.in
dscopy/darksusy-6.2.2/contrib/superiso_v3.4/: sm.c
dscopy/darksusy-6.2.2/contrib/superiso_v3.6/: Makefile-org  makefile.in
dscopy/darksusy-6.2.2/data/: AGSS09-table1.txt  AGSS09-table3.txt  solar-isotopes.xlsx  tab_install.pl
dscopy/darksusy-6.2.2/docs/: E11-References.tex  E12-Index.tex  I01-Introduction.tex  I04-Comparison.tex  I05-OriginalReferences.tex  src-dirs-to-include.txt  src-dirs-to-include.txt.auto
dscopy/darksusy-6.2.2/docs/headers/: definitions.tex
dscopy/darksusy-6.2.2/examples/: dsmain_wimp.driver
dscopy/darksusy-6.2.2/examples/aux/: DMhalo_bypass.f  flxconvplot.f  generic_wimp_oh2.f  vdSIDM_RD.f
dscopy/darksusy-6.2.2/examples/test/: dstest_genWIMP.f  dstest_mssm.f
dscopy/darksusy-6.2.2/scr/: add_libs.pl  config.pl  config2.pl  make_replaceable.pl  makemfcat.pl  preconfig.pl  req2int.pl  update_mainmf.pl
dscopy/darksusy-6.2.2/src/: makefile.in
dscopy/darksusy-6.2.2/src/an_yield/: DOC-name.tex  README-channel-numbers.txt  dsandec.f  dsanreadfiles.f  dsanyield_dbset.f  dsanyield_init.f  dsanyield_sim.f  dsanyield_sim_ls.f  dsanyieldget.f  makefile.in
dscopy/darksusy-6.2.2/src/aux/: DOC01-general.tex  dsdilog.f  dsfac.f  dsgamma.f  dshealpixave.f  dsidtag.f  dsmoderf.f  lngamma.f
dscopy/darksusy-6.2.2/src/aux_xcernlib/: DOC-name.tex  dgadap2.f  gpindp.f  wgamma.f  wlgama.f
dscopy/darksusy-6.2.2/src/aux_xdiag/: DOC01-theory.tex  DSHEigensystem.f  DSSEigensystem.f
dscopy/darksusy-6.2.2/src/aux_xquadpack/: DOC-name.tex  dqagp.f
dscopy/darksusy-6.2.2/src/cr_aux/: DOC-name.tex  dscrISRflux.f  dsfun_int.f  dslabelset.f  dstabfun2.f  makefile.in
dscopy/darksusy-6.2.2/src/cr_axi/: DOC-name.tex  DOC01-theory.tex  READMEcraxi.txt  dscraxiinit.f  dscraxirzck.f  dscraxiset_default.f  dsdbtdaxi.f  dsdbtdaxitab.f  dsepcraxick.f  dsepcraxisetlabel.f  dsepdndpaxi.f  dsepdphidpaxi.f  dspbbessel.f  dspbdmasaxi.f  dspbdphidtaxi.f  dspbpstab.f  dspbtdaxi.f  makefile.in
dscopy/darksusy-6.2.2/src/cr_gamma/: DOC01-theory.tex  DOC02-routines.tex  dscrgaflux_line_dec.f  dscrgaflux_v0ann.f
dscopy/darksusy-6.2.2/src/cr_nu/: DOC-name.tex  DOC01-theory.tex  dscrmuflux_v0ann.f  dscrnuflux_dec.f  dscrnuflux_line_dec.f  dscrnuflux_line_v0ann.f  dscrnuflux_v0ann.f  dscroscillation_simp.f  makefile.in
dscopy/darksusy-6.2.2/src/cr_ps/: DOC-name.tex  dsdbtdps.f  dsorbitps.f  dspbtdps.f  dspbtdps_td.f
dscopy/darksusy-6.2.2/src/dd/: dsddDMCRcountrate.f  dsddDMCRdgammadt.f  dsddDMCRflux.f  dsddDMCRquenching_set.f  dsddDMCRsigtarget.f  dsddTDMattenuation.f  dsddfffermi.f  dsddffism.f  dsddffls.f  dsddffoddg.f  dsddg2sigma.f  dsddhelp.f  dsddinit.f  dsddreadQF.f  dsddset.f  dsddsigmanucleon.f  dsddvearth.f
dscopy/darksusy-6.2.2/src/dmd_astro/: DOC01-theory.tex  dsdmasaxi.f  dsdmassph.f  dsdmdrho0mw.f  dsdmdsph.f  dsdmdtri.f
dscopy/darksusy-6.2.2/src/dmd_aux/: dsjfactor.f  dslosidriver.f  dslosifunsph.f  dslosisph.f  dstausph.f
dscopy/darksusy-6.2.2/src/dmd_mod/: DOC02-routines.tex  dsdmddriver.f  dsdmddriver_bur.f  dsdmdgetlabel.f  dsdmdprint_halomodel.f  dsdmdprof_ein.f  dsdmdselect_halomodel.f  dslabcheck.f  makefile.in
dscopy/darksusy-6.2.2/src/dmd_vel/: DOC-name.tex  DOC01-theory.tex  dshmudfnumc.f  dshmudftab.f
dscopy/darksusy-6.2.2/src/include/: dsanyieldcom.h  dscraxicom.h  dsddcom.h  dsdmdcom.h  dsdmddrvrcom.h  dsdmurcom.h  dshmcom.h  dskdcom.h  dslabelcom.h  dslocal.h  dssecap.h  dssecom.h  dssem_earth.h  dssem_sun-const.h  dssem_sun.h  dsseyieldcom.h
dscopy/darksusy-6.2.2/src/ini/: dsinit.f  dsinit_module.f  makefile.in
dscopy/darksusy-6.2.2/src/kd/: DOC01-theory.tex  dskdcint2.f  dskdgammarate.f  dskdinty.f  dskdmcut.f  dskdset.f  dskdtkd.f  makefile.in
dscopy/darksusy-6.2.2/src/rd/: DOC03-routines.tex  dgadap2_thav.f  dsrdcom.f  dsrddeltaneff.f  dsrddof.f  dsrdens.f  dsrdinit.f  dsrdomega.f  dsrdreaddof.f  dsrdsingledof.f  dsrdspline.f  dsrdtab.f  dsrdwres.f  dsrdwx.f
dscopy/darksusy-6.2.2/src/se_aux/: DOC-name.tex  DOC01-theory.tex  dssea_atmmu.f  dssea_ff.f  dssea_ff3.f  dssea_gauss1.f  dssea_honda.f  dssea_lnff.f  dssea_nuism.f  dssea_nusun.f  makefile.in
dscopy/darksusy-6.2.2/src/se_mod/: DOC01-theory.tex  dssem_earthdens.f  dssem_earthmassint.f  dssem_earthne.f  dssem_earthpotint.f  dssem_earthvesc.f  dssem_epfunc.f  dssem_sundens.f  dssem_sunmass.f  dssem_sunpot.f  dssem_sunpotint.f  dssem_sunread.f  dssem_sunvesc.f  dssem_sunx2z.f  dssem_sunz2x.f
dscopy/darksusy-6.2.2/src/se_nu/: DOC-name.tex  DOC02-routines.tex  dssenu_capearthnumi.f  dssenu_capearthtab.f  dssenu_ceint2.f  dssenu_csint2.f  dssenu_csintff.f  dssenu_csintff2.f  dssenu_ctabffcreate.f  dssenu_ctabget.f  dssenu_ctabread.f  dssenu_dqagseb.f  dssenu_foveru.f  dssenu_foveruearth.f  dssenu_hiprecint.f  dssenu_hiprecint2.f  dssenu_litlf_e.f  dssenu_litlf_s.f  dssenu_sefull.f  dssenu_veoutjupiter.f  makefile.in
dscopy/darksusy-6.2.2/tmp/: makefiles-to-make.txt
(+1241 files in other folders)
